# CMCompare

./: CMCompare.cabal  CMCompare.hs  tbiweb.txt
BioInf/: CMCompare.hs
_old/: run.sh
_old/src/: CMCompare.old.lhs  MkClusterList.hs  RunList.hs
_old/src/old/: CompareOld.lhs
rfam_clans/: CLANDESC.all  Clans2Graph.hs  clans2graph.sh
scripts/: HighScoreEdges.sh
work/: README
work/oldscripts/: dowith.sh  infernal.sh  mkNamedGraph.sh  mkgraph.sh  mkpdf.sh  run.sh  small.sh  with.sh
work/scripts/: HOWTO  infernal.sh  uniquepairs.sh
