name:           CMCompare
version:        0.0.1.3
author:         Christian Hoener zu Siederdissen, Ivo L. Hofacker
maintainer:     choener@tbi.univie.ac.at
copyright:      Christian Hoener zu Siederdissen, Ivo L. Hofacker, 2010
homepage:       http://www.tbi.univie.ac.at/software/cmcompare/
category:       Bioinformatics
synopsis:       Infernal covariance model comparison
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.6.0
description:
                Compares two Infernal covariance models. Returns the common
                MaxiMin score and the offending RNA sequence. High scores point
                toward low discriminative power of the two models. Based on:
                .
                "Christian Höner zu Siederdissen, and Ivo L. Hofacker. 2010.
                Discriminatory power of RNA family models. Bioinformatics 26,
                no. 18: 453–59"
                .
                <http://bioinformatics.oxfordjournals.org/content/26/18/i453.long>

extra-source-files:
  scripts/HighScoreEdges.sh
  scripts/NeighborGraph.sh

executable CMCompare
  build-depends:
    base >= 4 && < 5    ,
    array   == 0.4.*    ,
    containers == 0.5.* ,
    cmdargs >= 0.10     ,
    lens    == 3.*      ,
    parallel == 3.2.*   ,

    BiobaseXNA      == 0.6.3.*  ,
    BiobaseInfernal == 0.7.*

  main-is:
    CMCompare.hs

  ghc-options:
    -O2 -threaded -rtsopts -funbox-strict-fields -fllvm -optlo-O3 -optlo-inline -optlo-std-compile-opts
